# cargo-status

./: Cargo.toml  LICENSE  README.md
src/: cache.rs  display.rs  error.rs  lib.rs  main.rs  tests.rs  workspace.rs
src/config/: cli.rs  mod.rs  profiles.rs  toml_config.rs
src/tools/: mod.rs  registry.rs  status_check.rs
tests/: integration_tests.rs
